# chess

./: .gitignore  Cargo.toml  checkpoint.txt  games.txt  nohup.out  salida.txt  start.sh  suite.txt  suite10.txt  suite2.txt  suite2_results.txt  suite3.1.txt  suite3.txt  suite4.txt  suite5.txt  suite6.txt  suite7.txt  suite8.txt  suite9.txt  training_fen.txt
benches/: perft.rs
final_weights/: 2_hidden44220.pt  3_hidden2420.pt  4_hidden4820.pt  5_hidden2480.pt  6_hidden2700.pt  7_hidden8000.pt  8_hidden168000.pt  9_hidden2180.pt  bootstraping_2_hidden30840.pt
model_weights/: 2_hidden_0.pt  2_hidden_1.pt  2_hidden_10.pt  2_hidden_100.pt  2_hidden_101.pt  2_hidden_102.pt  2_hidden_103.pt  2_hidden_104.pt  2_hidden_105.pt  2_hidden_106.pt  2_hidden_107.pt  2_hidden_108.pt  2_hidden_109.pt  2_hidden_11.pt  2_hidden_110.pt  2_hidden_111.pt  2_hidden_112.pt  2_hidden_113.pt  2_hidden_114.pt  2_hidden_115.pt  2_hidden_116.pt  2_hidden_117.pt  2_hidden_118.pt  2_hidden_119.pt  2_hidden_12.pt  2_hidden_120.pt  2_hidden_121.pt  2_hidden_122.pt  2_hidden_123.pt  2_hidden_124.pt  2_hidden_125.pt  2_hidden_126.pt  2_hidden_127.pt  2_hidden_128.pt  2_hidden_129.pt  2_hidden_13.pt  2_hidden_130.pt  2_hidden_131.pt  2_hidden_132.pt  2_hidden_133.pt  (+3580 more)
src/: alpha_beta_search.rs  api.rs  attack_gen.rs  eval.rs  fen_positions.rs  fen_reader.rs  fen_writer.rs  game.rs  lib.rs  main.rs  make_move.rs  model.rs  move_gen.rs  move_notation.rs  notation.rs  perft.rs  piece.rs  suite.rs  test.rs  tests.rs  training_parser.rs  uci.rs  unmake.rs  zobrist_hashing.rs
tests/: tests.rs
(+19 files in other folders)
