[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
incremental = true
lto = true
debug = 0
codegen-units = 1
target-cpu= "native"
panic = "abort"

[[bench]]
name = "perft"
harness = false

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
http-types = "2.12.0"
serde_json = "1.0.85"
criterion = "0.3.4"